<resources>
    <string name="app_name">LeafyMart</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="view_all">View All</string>
    <string name="trending_plants">Trending Plants</string>
    <string name="my_profile">My Profile</string>
    <string name="full_name">Full Name</string>
    <string name="gmail">Gmail</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="logout">Logout</string>
    <string name="save_profile">Save Profile</string>
    <string name="view_profile_picture">View profile picture</string>
    <string name="upload_new_photo">Upload new photo</string>
    <string name="save_to_phone">Save to phone</string>
    <string name="my_favorites">My Favorites</string>
    <string name="my_cart">My Cart</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="total_amount">Total Amount:</string>
    <string name="checkout">Checkout</string>
    <string name="price_format">৳%d</string>
</resources>