<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/white_bg"
    android:orientation="vertical"
    android:padding="16dp">

    <View
        android:layout_width="40dp"
        android:layout_height="4dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp"
        android:background="@color/grey" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_view_photo"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="start|center_vertical"
        android:text="@string/view_profile_picture"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:icon="@drawable/ic_visibility"
        app:iconPadding="16dp"
        app:iconTint="@color/dark_green" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_upload_photo"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="start|center_vertical"
        android:text="@string/upload_new_photo"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:icon="@drawable/ic_edit"
        app:iconPadding="16dp"
        app:iconTint="@color/dark_green" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save_to_phone"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="start|center_vertical"
        android:text="@string/save_to_phone"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:icon="@drawable/ic_download"
        app:iconPadding="16dp"
        app:iconTint="@color/dark_green" />

</LinearLayout>