<androidx.coordinatorlayout.widget.CoordinatorLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context=".Fragments.ExploreFragment">



    <!-- Top Bar -->

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/topbar"
        android:backgroundTint="@color/light_grey">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:collapsedTitleTextAppearance="@style/ToolbarTextStyle"
            app:layout_scrollFlags="scroll|enterAlways">

            <!-- ToolBar -->

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:background="@color/light_grey"
                android:id="@+id/toolbar"
                app:layout_collapseMode="pin">

                <TextView
                    android:id="@+id/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/autour_one"
                    android:text="LeafyMart"
                    android:textColor="@color/dark_green"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText" />
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <!-- Search Bar -->

        <EditText
            android:id="@+id/search_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6sp"
            android:layout_marginLeft="16sp"
            android:layout_marginRight="16sp"
            android:layout_marginBottom="12sp"
            android:padding="12sp"
            android:elevation="8sp"
            android:drawableLeft="@drawable/baseline_search_24"
            android:hint=" Search plants, tools and more..."
            android:background="@drawable/white_bg"
            android:textColorHint="@color/black" />
    </com.google.android.material.appbar.AppBarLayout>

    <!-- Card view and categories -->

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <!-- Drawable work -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- ViewPager2 for Sliding Images -->
        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/imageSlider"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <!-- Categories -->

        <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16sp"
                    android:layout_marginEnd="16sp"
                    android:layout_marginTop="16sp"
                    android:weightSum="6"
                    android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textAlignment="viewStart"
                android:text="Categories" />

            <TextView
                android:id="@+id/categories_viewAll_TV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_weight="5"
                android:fontFamily="sans-serif"
                android:textColor="@color/dark_green"
                android:textAlignment="viewEnd"
                android:visibility="gone"
                android:text="View All" />
                </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="4"
                        android:orientation="horizontal">

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cardview_indoor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5sp"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:foreground="?attr/selectableItemBackground"
                            app:cardBackgroundColor="@color/white"
                            app:cardCornerRadius="15dp"
                            app:cardElevation="4dp"
                            app:cardUseCompatPadding="true">
                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <ImageView
                                    android:id="@+id/img_indoor"
                                    android:layout_width="match_parent"
                                    android:layout_height="60dp"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="10dp"
                                    android:scaleType="centerInside"
                                    android:src="@drawable/indoor_plant" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@id/img_indoor"
                                    android:layout_marginTop="5dp"
                                    android:layout_marginBottom="2sp"
                                    android:text="Indoor"
                                    android:textAlignment="center"
                                    android:textColor="@color/dark_green"
                                    android:textSize="16dp"
                                    android:textStyle="bold" />
                            </RelativeLayout>
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:id="@+id/cardview_outdoor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5sp"
                            android:layout_weight="1"
                            android:clickable="true"
                            android:foreground="?attr/selectableItemBackground"
                            app:cardBackgroundColor="@color/white"
                            app:cardCornerRadius="15dp"
                            app:cardElevation="4dp"
                            app:cardUseCompatPadding="true">
                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <ImageView
                                    android:id="@+id/img_outdoor"
                                    android:layout_width="match_parent"
                                    android:layout_height="60dp"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="10dp"
                                    android:scaleType="centerInside"
                                    android:src="@drawable/outdoor_plant" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@id/img_outdoor"
                                    android:layout_marginTop="5dp"
                                    android:layout_marginBottom="2sp"
                                    android:text="Outdoor"
                                    android:textAlignment="center"
                                    android:textColor="@color/dark_green"
                                    android:textSize="16dp"
                                    android:textStyle="bold" />
                            </RelativeLayout>
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:id="@+id/cardview_seeds"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5sp"
                            app:cardBackgroundColor="@color/white"
                            android:layout_weight="1"
                            app:cardUseCompatPadding="true"
                            app:cardElevation="4dp"
                            app:cardCornerRadius="15dp"
                            android:clickable="true"
                            android:foreground="?attr/selectableItemBackground">
                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <ImageView
                                    android:id="@+id/img_seeds"
                                    android:src="@drawable/seeds"
                                    android:layout_width="match_parent"
                                    android:layout_height="60dp"
                                    android:scaleType="centerInside"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="10dp" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@id/img_seeds"
                                    android:text="Seeds"
                                    android:textAlignment="center"
                                    android:textColor="@color/dark_green"
                                    android:textStyle="bold"
                                    android:textSize="16dp"
                                    android:layout_marginTop="5dp"
                                    android:layout_marginBottom="2sp" />
                            </RelativeLayout>
                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:id="@+id/cardview_tools"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5sp"
                            app:cardBackgroundColor="@color/white"
                            android:layout_weight="1"
                            app:cardUseCompatPadding="true"
                            app:cardElevation="4dp"
                            app:cardCornerRadius="15dp"
                            android:clickable="true"
                            android:foreground="?attr/selectableItemBackground">
                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <ImageView
                                    android:id="@+id/img_tools"
                                    android:src="@drawable/gardening_tools"
                                    android:layout_width="match_parent"
                                    android:layout_height="60dp"
                                    android:scaleType="centerInside"
                                    android:layout_centerHorizontal="true"
                                    android:layout_marginTop="10dp" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_below="@id/img_tools"
                                    android:text="Tools"
                                    android:textAlignment="center"
                                    android:textColor="@color/dark_green"
                                    android:textStyle="bold"
                                    android:textSize="16dp"
                                    android:layout_marginTop="5dp"
                                    android:layout_marginBottom="2sp" />
                            </RelativeLayout>
                        </androidx.cardview.widget.CardView>

                    </LinearLayout>

        <!-- Tranding Plants -->

        <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16sp"
                    android:layout_marginEnd="16sp"
                    android:layout_marginTop="16sp"
                    android:weightSum="6"
                    android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textAlignment="viewStart"
                android:id="@+id/trending_viewAll_TV"
                android:text="@string/trending_plants" />

            <TextView
                android:id="@+id/trending_plants_viewAll_TV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:layout_weight="5"
                android:fontFamily="sans-serif"
                android:textColor="@color/dark_green"
                android:textAlignment="viewEnd"
                android:text="@string/view_all" />
                </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/trending_plants_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp" />

    </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout >